# RAG_pipeline

./: .gitignore  RAG.py  README.md  config.py  data_models.py  generator.py  main.py  milvus_hybrid_index.py  pipeline.py  pyproject.toml  rerank.py  text_utils.py
data_docs/: plik1.txt
